--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <body>
         <canvas id="canvas" width="1900px" height="1000px"></canvas>
         <script src="index.js"></script>
+        <div className="scoreboard">
+            <label> Caught: <p id="caught"></p> </label>
+            <label> Splatted: <p id="splatted"></p> </label>
+        </div>
     </body>
 </html>
