--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <canvas id="canvas" width="1900px" height="1000px"></canvas>
         <script src="index.js"></script>
         <div className="scoreboard">
-            <label> Caught: <p id="caught"></p> </label>
-            <label> Splatted: <p id="splatted"></p> </label>
+            <label class="score-label"> Caught: <p id="caught"></p> </label>
+            <label class="score-label"> Splatted: <p id="splatted"></p> </label>
         </div>
     </body>
 </html>
