--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <canvas id="canvas" width="1900px" height="1000px"></canvas>
         <script src="index.js"></script>
+        <script src="level.js"></script>
         <div className="scoreboard">
             <label class="score-label"> Caught: <p id="caught"></p> </label>
             <label class="score-label"> Splatted: <p id="splatted"></p> </label>
